# rederr

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  deny.toml  stdouterr.sh
.github/: dependabot.yml
.github/workflows/: pr-checks.yaml  release.yaml
src/: main.rs  params.rs  timeout.rs
tests/: exit.rs  general.rs
tests/fixtures/: invalid_utf8.sh  midline_sleep.sh  mixed_output.sh  simple.sh  stdouterr.sh
tests/helpers/: mod.rs
