[package]
name = "rederr"
version = "0.1.0"
authors = ["Daniel Parks <oss-rederr@demonhorse.org>"]
description = "Run a program and make stderr red"
homepage = "https://github.com/danielparks/rederr"
repository = "https://github.com/danielparks/rederr"
readme = "README.md"
keywords = []
categories = [] # https://crates.io/category_slugs
license = "MIT OR Apache-2.0"
edition = "2018"

[badges]

[dependencies]
anyhow = "1.0.44"
atty = "0.2.14"
clap = { version = "3.2.15", features = ["derive"] }
duration-str = "0.4.0"
libc = "0.2.126"
popol = "1.0.0"
termcolor = "1.1.3"

[dev-dependencies]
assertify = "0.6.0"
