[package]
name = "rederr"
version = "0.1.0"
authors = ["Daniel Parks <oss-rederr@demonhorse.org>"]
description = "Run a program and make stderr red"
homepage = "https://github.com/danielparks/rederr"
repository = "https://github.com/danielparks/rederr"
readme = "README.md"
keywords = ["stderr"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.44"
atty = "0.2.14"
bstr = { version = "1.1.0", default-features = false }
clap = { version = "4.0.17", features = ["derive"] }
duration-str = { version = "0.5.0", default-features = false }
popol = "2.0.0"
termcolor = "1.1.3"

[dev-dependencies]
assert2 = "0.3.7"
